--- a/my-angular-app/src/app/app.component.html
+++ b/my-angular-app/src/app/app.component.html
@@ -227,6 +227,15 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <div>
+        <h1>User List</h1>
+        <ul>
+          <li *ngFor="let user of users">{{ user }}</li>
+        </ul>
+        <input #userName type="text" placeholder="Enter name">
+        <button (click)="addUser(userName.value)">Add User</button>
+      </div>
+      
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
