--- a/angularmaterial/src/app/app.component.html
+++ b/angularmaterial/src/app/app.component.html
@@ -26,5 +26,11 @@
 
 <button mat-button>Click Me</button>
 
+<div class="container">
+  <button mat-button (click)="openDialog()">Open Dialog</button>
+</div>
+
+
+<router-outlet></router-outlet> 
 
 
